# thread-maker-discord-bot

./: .discloudignore  .env.example  .gitignore  Dockerfile  LICENSE  bot.py  discloud.config  pyproject.toml
app/api/: apiv1.py
app/bot/: commands.py  errors.py  threadmaker.py
app/cmd/: main.py
